2012-08-01 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Fix clush_exit() side effects thanks to latest task
	termination improvements (tickets #185).

	* Task.py: Avoid termination race condition when using multiple threads
	and calling abort()+join() from another thread (tickets #197).

2012-07-09 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: "All nodes" extended pattern support with @* (ticket #193).

2012-04-08 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.6 released.

	* doc/guide: Add ClusterShell User and Programming Guide LaTeX source to
	repository.

2012-04-07 S. Thiell <stephane.thiell@cea.fr>

	* doc/examples/check_nodes.py: Add simple example of event-driven script.

2012-03-31 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Nodeset.py: Allow -a and common nodeset operations when using -l to
	list belonging groups (a new 1.6 feature, see ticket #162).

2012-03-29 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Worker.py: added documentation for
	worker.current_[node,msg,errmsg,rc] variables (ticket #160).

	* Task.py: timeout parameters better explained (ticket #157).

2012-03-28 S. Thiell <stephane.thiell@cea.fr>

	* CLI/OptionParser.py: Add --diff option to enable diff display between
	gathered outputs. Enabled in clush and clubak (ticket #176).

	* CLI/Display.py: Add _print_diff() and flush() methods.

	* Task.py: Initialize MsgTree instances in constructor according to
	default values in order to allow no-op calls to buffer getters before
	resume() (ticket #186).

2012-03-26 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Fix clush --[r]copy behavior when no source directory is
	specified (ticket #172).

	* CLI/Clush.py: Fix interactive mode gather/standard toggle error, when
	using special character '=' (ticket #171).

	* CLI/Clubak.py: Add -v/-q verbosity options (ticket #174).

2012-03-24 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clubak.py: Add --interpret-keys=never,always,auto option to clubak